fixed navigation mobile responsiveness

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -65,6 +65,11 @@
   .header-content {
     flex-direction: column;
   }
+
+  .nav-link-item {
+    padding-right: 1rem;
+    padding-left: 1rem;
+  }
 }
 
 .content-section {
